--- a/02_css/tp/07_flexbox/exos-base/03/assets/style.css
+++ b/02_css/tp/07_flexbox/exos-base/03/assets/style.css
@@ -1,34 +1,39 @@
-/* *
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Platypi:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
+*
 {
    box-sizing: border-box;
-} */
+   margin: 0;
+   padding: 0;
+}
 
 body
 {
-   display: flex;
-   flex-direction: row;
-   flex-flow: row wrap;
-   /* flex-wrap: wrap; */
-   /* height: 100vh;
-   width: 100vw; */
-   gap: 7px;
+   background-color: #f1f1f1;
+   font-family: "Montserrat", sans-serif;
 }
 
 .container
 {
    display: flex;
-   /* flex-direction: row; */
-   align-items: center;
-   justify-content: center;
-   height: 199px;
-   width: 199px;
+   flex-wrap: wrap;
+   height: 100vh;
+}
+
+.f
+{
+   align-content: center;
    color: #fff;
-   font-size: 79px;
-   font-weight: 800;
-   /* padding-top: 34px; */
-   /* text-align: center; */
-   
-   /* border: 2px solid white; */
+   /* flex-grow: 1;
+   flex-shrink: 1;
+   flex-basis: 25%; */
+   flex: 1 1 24%;
+   font-size: 100px;
+   font-weight: 600;
+   margin: .5%;
+   text-align: center;
+   text-shadow: 3px 3px 0 rgba(0, 0, 0, .3);
+   box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .3);
 }
 
 .f1
@@ -71,13 +76,12 @@ body
    background-color: grey;
 }
 
-@media screen and (max-width: 870px)
+/* @media screen and (max-width: 824px)
 {
    .container
    {
       height: 300px;
-      /* max-width: 168px; */
+      max-width: 168px;
       max-width: 100px;
    }
-}
-  
+} */
