--- a/02_css/tp/07_flexbox/01_meubles/assets/css/style.css
+++ b/02_css/tp/07_flexbox/01_meubles/assets/css/style.css
@@ -14,6 +14,9 @@
    line-height: 1.5;
 }
 
+
+/* ------ HEADER ------ */
+
 header
 {
    background-color: #f5f5f5;
@@ -46,6 +49,9 @@ a
    font-size: 16px;
 }
 
+
+/* ------ SECTION 1 (chaise blanche) ------ */
+
 .chair-1
 {
    display: flex;
@@ -76,11 +82,14 @@ h1, h2
    line-height: 1.2;
 }
 
+
+/* ------ SECTION 2 (1° fond) ------ */
+
 .bg-fond
 {
    align-content: center;
    background-image: url("../img/motif.jpg");
-   height: 40vh;
+   height: 444px;
 }
 
 .fond
@@ -100,6 +109,9 @@ h1, h2
    text-align: left;
    width: 900px;
 }
+
+
+/* ------ SECTION 3 (Galerie 3 chaises) ------ */
 
 .chairs
 {
@@ -125,19 +137,32 @@ h1, h2
    width: 31%;
 }
 
+
+/* ------ FOOTER (2° fond) ------ */
+
+footer
+{
+   display: flex;
+   flex-direction: column;
+   height: 444px;
+   justify-content: center;
+   align-items: center;
+}
+
 h3
 {
+   font-family: 'Times New Roman', Times, serif;
    font-size: 34px;
-   padding: 15px;
+   padding: 49px;
 }
 
 .logos
 {
    display: flex;
-   flex-wrap: wrap;
+   /* flex-wrap: wrap;
    justify-content: center;
-   align-items: center;
-   padding: ;
+   align-items: center; */
+   /* padding: ; */
 }
 
 @media screen and (max-width: 620px)
@@ -210,10 +235,10 @@ h3
 }
 
 @media screen and (max-width: 1679px) {
-  
+/*   
    .logos
    {
       padding: 4% 18%;
-   }
+   } */
 
 }
