--- a/02_css/tp/07_flexbox/01_meubles/assets/css/style.css
+++ b/02_css/tp/07_flexbox/01_meubles/assets/css/style.css
@@ -7,41 +7,27 @@
    padding: 0;
 }
 
-.container
+html
+{
+   scroll-behavior: smooth;
+}
+
+a
+{
+   color: inherit;
+   text-decoration: none;
+}
+
+body
 {
    color: #000;
    font-family: "Roboto", sans-serif;
    line-height: 1.5;
 }
 
-
-/* ------ HEADER ------ */
-
-header
-{
-   background-color: #f5f5f5;
-   padding: 20px;
-}
-
-nav
+.d-flex
 {
    display: flex;
-   flex-direction: row;
-   justify-content: space-between;
-   align-items: center;
-   flex: 1 1 auto;
-   max-width: 1200px;
-   margin: 0 auto;
-}
-
-a
-{
-   display: inline-block;
-   /* Line-height : ajuste automatiquement la position du texte dans un bloc au milieu */
-   line-height: 89px;
-   margin-left: 36px;
-   text-align: right;
-   text-decoration: none;
 }
 
 .t-s
@@ -50,12 +36,46 @@ a
 }
 
 
+
+/* ------ HEADER ------ */
+
+header
+{
+   background-color: #f5f5f5;
+   padding: 20px;
+   position: fixed;
+   width: 100%;
+}
+
+nav
+{
+   justify-content: space-between;
+   align-items: center;
+   margin: 0 auto;
+}
+
+nav div a
+{
+   display: inline-block;
+   /* Line-height : ajuste automatiquement la position du texte dans un bloc au milieu */
+   line-height: 89px;
+   margin-left: 36px;
+   text-align: right;
+
+}
+
+
 /* ------ SECTION 1 (chaise blanche) ------ */
 
 .chair-1
 {
-   display: flex;
-   flex-direction: row;
+
+   min-height: 860px;
+}
+
+.chair-1>*
+{
+   flex: 1 1 50%;
 }
 
 .chair
@@ -66,13 +86,12 @@ a
 
 .chair-txt
 {
-   background-color: #fff;
    background-size: 50vw;
-   display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   width: 50%;
+   padding: 80px 20px;
+   text-align: center;
 }
 
 h1, h2
@@ -210,7 +229,7 @@ h3
       flex-direction: column;
    }
 
-   .chairs>img
+   .chairs > img
    {
       height: 33.333%;
       width: 100%;
