--- a/02_css/tp/07_flexbox/04_bioware/assets/css/style.css
+++ b/02_css/tp/07_flexbox/04_bioware/assets/css/style.css
@@ -33,24 +33,42 @@ body
    text-transform: uppercase;
 }
 
+
+
 /* ------ HEADER ------ */
 
 header
 {
    background-color: #000;
-   align-items: center;
-   height: 87px;
-   justify-content: space-around;
+   height: 100px;
    position: fixed;
+   top: 0;
+   left: 0;
    width: 100%;
 }
 
-nav > a
+nav
+{
+   justify-content: space-between;
+   margin: 0 auto;
+   width: 1141px;
+}
+
+header > nav
+{
+   align-items: center;
+}
+
+header > nav > div > a
 {
    color: #606060;
+   letter-spacing: 1px;
    line-height: 100px;
-   padding: 0 23px;
+   padding-left: 46px;
 }
+
+
+
 
 /* ------ MAIN / HERO BANNER ------ */
 
@@ -61,7 +79,17 @@ main
    color: #fff;
    flex-direction: column;
    height: 768px;
-   padding: 172px 0 116px 390px;
+
+}
+
+.s-1
+{
+   margin: 0 auto;
+}
+
+.shadow
+{
+   text-shadow: 0 4px 40px rgba(0, 0, 0, .85);
 }
 
 .p1
@@ -69,8 +97,9 @@ main
    font-family: 'Oswald', sans-serif;
    font-size: 120px;
    font-weight: 700;
-   line-height: 159px;
-   width: 1010px;
+   line-height: 131px;
+   padding-top: 204px;
+   width: 1141px;
 }
 
 .p2
@@ -93,6 +122,8 @@ main
    letter-spacing: 1px;
 }
 
+
+
 /* ------ SECTION ------ */
 
 section
@@ -111,22 +142,26 @@ section > div
    width: 1141px;
 }
 
+
+
 /* ------ FOOTER ------ */
 
 footer
 {
    height: 240px;
-   justify-content: center;
    align-items: center;
    background-color: #191919;
-
 }
 
-footer > div
+h2
+{
+   font-size: 14px;
+}
+
+footer > nav
 {
    justify-content: space-between;
    width: 1141px;
-   height: 144px;
 }
 
 .l-s
@@ -146,16 +181,26 @@ footer > div
    width: 50px;
 }
 
-.i-2
+.i2
 {
    height: 29px;
-   padding-left: 24px;
-   padding-top: 16px;
+   margin-left: 24px;
+   margin-top: 10px;
 }
 
-.links > ul
+.links
 {
-   padding: 0 78px;
+   gap: 78px; 
+}
+
+.l1
+{
+   flex-direction: column;
+}
+
+.l2
+{
+   flex-direction: column;
 }
 
 .color1
