--- a/02_css/tp/07_flexbox/05_invest/assets/css/style.css
+++ b/02_css/tp/07_flexbox/05_invest/assets/css/style.css
@@ -1,7 +1,20 @@
+/* Possibilité de écupérer la font depuis un CDN (CDN Fonts) : + opti car - de poids sur notre site et évite de la télécharger à chaque fois MAIS si le serveur du CDN tombe en panne => Problème 
+@font-face{font-family:satoshi;font-style:normal;font-weight:400;src:local('Satoshi'),url(https://fonts.cdnfonts.com/s/85546/Satoshi-Regular.woff) format('woff')}@font-face{font-family:satoshi;font-style:italic;font-weight:400;src:local('Satoshi'),url(https://fonts.cdnfonts.com/s/85546/Satoshi-Italic.woff) format('woff')}@font-face{font-family:satoshi;font-style:normal;font-weight:300;src:local('Satoshi'),url(https://fonts.cdnfonts.com/s/85546/Satoshi-Light.woff) format('woff')}@font-face{font-family:satoshi;font-style:italic;font-weight:300;src:local('Satoshi'),url(https://fonts.cdnfonts.com/s/85546/Satoshi-LightItalic.woff) format('woff')}@font-face{font-family:satoshi;font-style:normal;font-weight:500;src:local('Satoshi'),url(https://fonts.cdnfonts.com/s/85546/Satoshi-Medium.woff) format('woff')}@font-face{font-family:satoshi;font-style:italic;font-weight:500;src:local('Satoshi'),url(https://fonts.cdnfonts.com/s/85546/Satoshi-MediumItalic.woff) format('woff')}@font-face{font-family:satoshi;font-style:normal;font-weight:700;src:local('Satoshi'),url(https://fonts.cdnfonts.com/s/85546/Satoshi-Bold.woff) format('woff')}@font-face{font-family:satoshi;font-style:italic;font-weight:700;src:local('Satoshi'),url(https://fonts.cdnfonts.com/s/85546/Satoshi-BoldItalic.woff) format('woff')}@font-face{font-family:satoshi;font-style:normal;font-weight:900;src:local('Satoshi'),url(https://fonts.cdnfonts.com/s/85546/Satoshi-Black.woff) format('woff')}@font-face{font-family:satoshi;font-style:italic;font-weight:900;src:local('Satoshi'),url(https://fonts.cdnfonts.com/s/85546/Satoshi-BlackItalic.woff) format('woff')} */
+
 @font-face{
    font-family: 'Satoshi';
    src: url(../fonts/Satoshi_Complete/Fonts/TTF/Satoshi-Variable.ttf);
 }
+
+/* :root
+{
+   --text-color: #666B7F;
+}
+
+body
+{
+   color: var(--text-color);
+} */
 
 *
 {
@@ -13,6 +26,7 @@
 html
 {
    font-size: 62.5%;
+   scroll-behavior: smooth;
 }
 
 body
@@ -37,6 +51,7 @@ body
 .btn:hover
 {
    background-color: #41FF6E;
+   transition: all .7s ease;
 }
 
 .c-i
@@ -80,40 +95,46 @@ body
 }
 
 
+
 /* ------ HEADER ------ */
 
 header
 {
    background-color: #FFF;
+   box-shadow: 0 2px 20px rgba(0, 0, 0, .04);
    height: 7rem;
    position: fixed;
    width: 100%;
-   top: 0;
    left: 0;
+   right: 0;
 }
 
 nav
 {
    align-items: center;
    justify-content: space-between;
-   margin: 2.3rem 4.8rem;
+   margin: 0 4.8rem;
 }
 
 ul
 {
+   gap: 3.2rem;
    list-style: none;
 }
 
 ul li a
 {
-   display: inline-block;
-   margin: 0 1.6rem;
+   display: block;
+   font-weight: 500;
+   line-height: 7rem;
 }
 
 ul li a:hover, .active
 {
    color: #000829;
+
 }
+
 
 
 /* ------ SECTION 1 ------ */
@@ -121,16 +142,18 @@ ul li a:hover, .active
 main
 {
    align-items: center;
-   background-image: url('../img/hero-bkg.png');
-   background-repeat: no-repeat;
+   background: url('../img/hero-bkg.png') no-repeat center center/cover;
+
    height: 108rem;
+   padding: 0 4.8rem;
 }
 
-main div
+main article
 {
-   height: 33.2rem;
+   /* height: 33.2rem; */
    margin-left: 26rem;
    width: 67.8rem;
+   /* padding-right: 40%; */
 }
 
 h1
@@ -140,11 +163,17 @@ h1
    margin-bottom: 2rem;
 }
 
+main article p
+{
+   text-align: start;
+}
+
 main a
 {
    margin-top: 4rem;
    width: 22.9rem;
 }
+
 
 
 /* ------ SECTION 2 ------ */
@@ -170,18 +199,19 @@ h2
 
 .articles
 {
+   gap: 4rem;
+   flex-wrap: wrap;
    justify-content: center;
 }
 
-article
+.services article
 {
    flex-direction: column;
    align-items: center;
-   margin: 0 1.05rem;
    width: 45.2rem;
 }
 
-article img
+.services article img
 {
    margin-bottom: 2.4rem;
 }
@@ -200,9 +230,15 @@ article p
 }
 
 
+
 /* ------ SECTION 3 ------ */
 
-.about > div
+.about
+{
+   flex-wrap: wrap;
+}
+
+.about > article
 {
 
    padding: 14.5rem 4.8rem;
@@ -226,6 +262,7 @@ article p
 }
 
 
+
 /* ------ SECTION 4 ------ */
 
 .clients
@@ -241,8 +278,11 @@ article p
 
 .logos
 {
+   flex-wrap: wrap;
+   gap: 14rem;
    justify-content: space-between;
 }
+
 
 
 /* ------ FORMULAIRE ------ */
@@ -267,19 +307,29 @@ form
 .field
 {
    background-color: #D9D9D9;
-   border: none;
+   border: 2px solid #D9D9D9;
+   outline: none;
    margin-bottom: 3.2rem;
    width: 72.2rem;
+}
+
+.field:focus
+{
+   border-color: #000829;
 }
 
 input
 {
    height: 5.4rem;
+   padding-left: 1rem;
 }
 
 textarea
 {
+
+   padding: 1rem;
    resize: none;
+
 }
 
 form a
@@ -295,6 +345,7 @@ form a p:hover
 }
 
 
+
 /* ------ FOOTER ------ */
 
 footer
@@ -304,5 +355,34 @@ footer
    color: #FFF;
    justify-content: center;
    align-items: center;
+   line-height: .9rem;
+
 }
 
+
+
+/* ------ MEDIA QUERIES ------ */
+
+@media (max-width: 599px)
+{
+
+   .hero article h1
+   {
+      font-size: 4.8rem;
+   }   
+
+   header > nav > ul > li > a
+   {
+      display: none;
+   }
+
+   h2
+   {
+      font-size: 3.2rem;
+   }
+
+   .about img
+   {
+      display: block;
+   }
+}
