--- a/02_css/tp/07_flexbox/01_meubles/assets/css/style.css
+++ b/02_css/tp/07_flexbox/01_meubles/assets/css/style.css
@@ -5,10 +5,12 @@
    box-sizing: border-box;
    margin: 0;
    padding: 0;
+
 }
 
 html
 {
+   font-size: 16px;
    scroll-behavior: smooth;
 }
 
@@ -30,9 +32,10 @@ body
    display: flex;
 }
 
-.t-s
+.f-s
 {
-   font-size: 16px;
+   font-size: 100px;
+   line-height: 1.2;
 }
 
 
@@ -65,12 +68,12 @@ nav div a
 }
 
 
+
 /* ------ SECTION 1 (chaise blanche) ------ */
 
 .chair-1
 {
-
-   min-height: 860px;
+   min-height: 83vh;
 }
 
 .chair-1>*
@@ -97,9 +100,9 @@ nav div a
 h1, h2
 {
    font-family: 'Times New Roman', Times, serif;
-   font-size: 100px;
-   line-height: 1.2;
+
 }
+
 
 
 /* ------ SECTION 2 (1° fond) ------ */
@@ -130,6 +133,7 @@ h1, h2
 }
 
 
+
 /* ------ SECTION 3 (Galerie 3 chaises) ------ */
 
 .chairs
@@ -155,6 +159,7 @@ h1, h2
    object-fit: cover;
    width: 31%;
 }
+
 
 
 /* ------ FOOTER (2° fond) ------ */
