--- a/02_css/tp/07_flexbox/05_invest/assets/css/style.css
+++ b/02_css/tp/07_flexbox/05_invest/assets/css/style.css
@@ -41,7 +41,9 @@ body
 .btn
 {
    background-color: #25D887;
+   border: 1px solid #000;
    border-radius: 0.3rem;
+   box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
    color: #FFF;
    display: inline-block;
    line-height: 6rem;
@@ -233,11 +235,6 @@ article p
 
 /* ------ SECTION 3 ------ */
 
-.about
-{
-   flex-wrap: wrap;
-}
-
 .about > article
 {
 
@@ -338,11 +335,15 @@ form a
    width: 72.2rem;
 }
 
+/* form a p
+{
+   transition: all 1sec ease;
+}
+
 form a p:hover
 {
-   animation: slide-left easy 1s;
-   transform: translatex(-30rem);
-}
+   transform: translateX(-300px);
+} */
 
 
 
@@ -379,6 +380,11 @@ footer
    h2
    {
       font-size: 3.2rem;
+   }
+
+   .about
+   {
+      flex-wrap: wrap;
    }
 
    .about img
