--- a/02_css/tp/07_flexbox/02_galery/assets/css/style.css
+++ b/02_css/tp/07_flexbox/02_galery/assets/css/style.css
@@ -8,18 +8,14 @@
 .container
 {
    display: flex;
-   justify-content: stretch;
+   flex-wrap: wrap;
+   margin: 0 auto;
+   max-width: 1500px;
 }
 
-.d1, .d2, .d3
+img
 {
-   display: flex;
-   /* flex-direction: column; */
-   flex-wrap: wrap;  
-   flex: 0 1 33%;
-}
-
-.img
-{
+   max-height: 250px;
    margin: 7px;
+   flex: 1 3 auto;
 }
