--- a/02_css/tp/07_flexbox/05_invest/assets/css/style.css
+++ b/02_css/tp/07_flexbox/05_invest/assets/css/style.css
@@ -41,7 +41,6 @@ body
 .btn
 {
    background-color: #25D887;
-   border: 1px solid #000;
    border-radius: 0.3rem;
    box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
    color: #FFF;
@@ -134,18 +133,16 @@ ul li a
 ul li a:hover, .active
 {
    color: #000829;
-
 }
 
 
 
-/* ------ SECTION 1 ------ */
+/* ------ SECTION 1 (INVESTMENT) ------ */
 
 main
 {
    align-items: center;
    background: url('../img/hero-bkg.png') no-repeat center center/cover;
-
    height: 108rem;
    padding: 0 4.8rem;
 }
@@ -178,7 +175,7 @@ main a
 
 
 
-/* ------ SECTION 2 ------ */
+/* ------ SECTION 2 (SERVICES) ------ */
 
 .s1
 {
@@ -223,7 +220,7 @@ h3
    margin-bottom: 2rem;
 }
 
-article p
+.services article p
 {
    font-size: 1.6rem;
    line-height: 2.4rem;
@@ -233,11 +230,10 @@ article p
 
 
 
-/* ------ SECTION 3 ------ */
+/* ------ SECTION 3 (ABOUT) ------ */
 
 .about > article
 {
-
    padding: 14.5rem 4.8rem;
 }
 
@@ -246,11 +242,12 @@ article p
    background-color: #F6F6F6;
 }
 
-.about div p
+.about article p
 {
    line-height: 2.7rem;
    padding-top: 2rem;
    padding-bottom: 4.78rem;
+   text-align: left;
 }
 
 .about div a
@@ -260,7 +257,7 @@ article p
 
 
 
-/* ------ SECTION 4 ------ */
+/* ------ SECTION 4 (CLIENTS) ------ */
 
 .clients
 {
@@ -276,7 +273,7 @@ article p
 .logos
 {
    flex-wrap: wrap;
-   gap: 14rem;
+   gap: 4rem;
    justify-content: space-between;
 }
 
